SFDCSCTemplate/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>synety__Call_Category__c</fullName>
        <label>Call Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>synety__Call_Recording__c</fullName>
        <formula>if( isblank(synety__Recording__c), 
HYPERLINK(&quot;javascript:alert(&apos;Call recording not found for this activity.&apos;);void(0);&quot; ,&quot;Call Recording&quot;,&quot;_self&quot;), 
HYPERLINK(&quot;javascript:window.open(&apos;/apex/synety__gotoCallRecording?id=&quot; &amp; Id &amp; &quot;&amp;url=&quot; &amp; synety__Recording__c &amp;&quot;?type=mp3&apos;,&apos;&apos;,&apos;width=800, height=500&apos;);void(0);&quot; ,&quot;Call Recording&quot;,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>synety__From__c</fullName>
        <label>Click Device</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>synety__Recording__c</fullName>
        <label>Call Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>synety__To__c</fullName>
        <label>Phone Number Called</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>